--- a/cv-screenonly.css
+++ b/cv-screenonly.css
@@ -1,4 +1,6 @@
 .page {
-  border: 1px solid grey;
-  box-shadow: 6px 6px 0px 0px #CCC;
+  /* border: 1px solid grey; */
+  box-shadow:
+    0px 0px 0px 1px grey,
+    6px 6px 0px 0px #CCC;
 }
