--- a/cv.css
+++ b/cv.css
@@ -6,6 +6,7 @@ html, body {
   padding: 0;
   font-family: "DejaVu Sans", serif;
   color: #292929;
+  font-size: 10pt;
 }
 .page {
   background : linear-gradient(-45deg, #5ee7df, #b490ca);
@@ -14,7 +15,7 @@ html, body {
   margin: auto;
   /* padding: 1.5cm 1cm; */
   border: 1.5cm solid #FFF;
-  border-width: 1.5cm 1cm;
+  border-width: 1cm 1cm;
 
 }
 
@@ -22,11 +23,19 @@ html, body {
 GENERAL
 \*****************************************************/
 
+.page > section {
+  border-top: 10px solid #FFF;
+}
 .page > h1 {
   background: #FFF;
   margin: 0;
   padding: 10px 0;
-  -webkit-background-clip: text;
+  font-size: 1em;
+  display: none;
+}
+
+.page a {
+  color: #000;
 }
 /*****************************************************\
 HEADER
@@ -37,11 +46,10 @@ header {
   color: #fff;
   display: flex;
   align-items: center;
-  padding: .6cm;
+  padding: .3cm;
   flex-direction: row;
 }
-header > * {
-}
+
 header img {
   width: 3cm;
   height: 3cm;
@@ -70,7 +78,7 @@ header ul li {
   list-style: none;
 }
 header a {
-  color: #fff;
+  color: #fff !important;
   text-decoration: none;
 }
 
@@ -88,7 +96,7 @@ COMPETENCES
 #skills .skill {
   display: flex;
   flex-direction: column;
-  border: 5px solid #FFF;
+  border: 2.5px solid #FFF;
 }
 
 
@@ -109,12 +117,12 @@ COMPETENCES
   border-bottom : none;
 }
 
-
 #skills .skill h3{
   margin: 5px;
   margin-bottom: 2px;
   padding-bottom: 3px;
   color: #fff;
+  font-size: 1em;
 }
 #skills .skill .skill-content{
   padding: 10px 5px;
@@ -126,4 +134,73 @@ COMPETENCES
 #skills .skill .skill-content [class^='fa']{
   color: #b490ca;
   width: 1.8rem;
+}
+
+/*****************************************************\
+EXPERIENCES
+\*****************************************************/
+
+#experiences h3{
+}
+
+#experiences .exp {
+}
+#experiences .exp h3 {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  font-size: 1em;
+}
+#experiences .exp .exp-date {
+  color: #fff;
+  padding: 0 5px;
+}
+
+#experiences .exp .exp-title {
+  background: #fff;
+  margin: 5px;
+  padding: 5px 10px;
+  flex-grow: 1;
+}
+#experiences .exp .exp-content {
+  background: #fff;
+  padding: 5px 0 10px 0;
+}
+#experiences .exp .exp-content hr {
+  display: inline;
+  border: none;
+  color: #ccc;
+}
+#experiences .exp .exp-content hr::before {
+  content: " /// ";
+}
+
+#bottom {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+
+}
+
+
+#formation {
+  border-left: 5px solid #FFF;
+  text-align: right;
+}
+
+#formation .form {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 5px;
+}
+#formation .form span:first-child { /* date */
+  display: inline-block;
+  width: 100px;
+  padding: 0 3px;
+  text-align: right;
+}
+#formation .form span:last-child { /* title */
+  background: #FFF;
+  padding: 3px;
+  flex-grow: 1;
 }
