--- a/cv.css
+++ b/cv.css
@@ -104,8 +104,8 @@ COMPETENCES
 #skills {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* grid-gap: 10px; */
-  /* background: #F00; */
+  border-top: 15px solid #FFF;
+  border-bottom: 15px solid #FFF;
 }
 
 #skills .skill {
@@ -141,7 +141,7 @@ COMPETENCES
 }
 #skills .skill .skill-content{
   padding: 10px 5px;
-  margin: 0 5px 5px;
+  margin: 0;
   background: #FFF;
   flex-grow: 1;
 }
@@ -155,6 +155,8 @@ COMPETENCES
 EXPERIENCES
 \*****************************************************/
 
+#experiences .exp {
+}
 #experiences .exp h3 {
   display: flex;
   margin: 0;
@@ -169,14 +171,20 @@ EXPERIENCES
 
 #experiences .exp .exp-title {
   background: #fff;
-  margin: 5px;
+  margin-top: 2px;
+  /* margin: 0; */
   padding: 5px 10px;
   flex-grow: 1;
 }
 #experiences .exp .exp-content {
   background: #fff;
-  padding: 5px 0 10px 0;
+  padding: 5px 0 20px 0;
 }
+
+
+/*****************************************************\
+BOTTOM PART
+\*****************************************************/
 
 #bottom {
   display: grid;
@@ -191,6 +199,10 @@ EXPERIENCES
   font-size: 1.1em;
   text-align: left;
 }
+
+/*****************************************************\
+AUTRE INFOS
+\*****************************************************/
 
 
 #autre {
@@ -212,10 +224,15 @@ EXPERIENCES
   color: #fff;
 }
 
+
+/*****************************************************\
+FORMATION
+\*****************************************************/
+
 #formation {
   border-left: 5px solid #FFF;
   text-align: right;
-  padding: 5px;
+  padding: 5px;;
 }
 
 #formation .form {
@@ -259,6 +276,10 @@ EXPERIENCES
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent #ffffff;
 }
+
+/*****************************************************\
+FOOTER = remaining space : color in white
+\*****************************************************/
 
 footer {
   background: #fff;
