--- a/cv.css
+++ b/cv.css
@@ -29,13 +29,13 @@ html, body {
   background : linear-gradient(-45deg, #5ee7df, #b490ca);
 }
 
-.page > section {
+/* .page > section {
   border-top: 10px solid #FFF;
-}
+} */
 .page > h1 {
   background: #FFF;
   margin: 0;
-  padding: 10px 0;
+  /* padding: 10px 0; */
   font-size: 1em;
   display: none;
 }
@@ -104,14 +104,14 @@ COMPETENCES
 #skills {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border-top: 15px solid #FFF;
-  border-bottom: 15px solid #FFF;
+  border-top: .3cm solid #FFF;
+  border-bottom: .3cm solid #FFF;
 }
 
 #skills .skill {
   display: flex;
   flex-direction: column;
-  border: 2.5px solid #FFF;
+  border: 0.5mm solid #FFF;
 }
 
 
@@ -133,17 +133,20 @@ COMPETENCES
 }
 
 #skills .skill h3{
-  margin: 5px;
-  margin-bottom: 2px;
-  padding-bottom: 3px;
+  margin: 1.3mm;
+  margin-bottom: 0.5mm;
+  padding-bottom: 0.8mm;
   color: #fff;
   font-size: 1em;
+  /* flex-grow: 1; */
 }
 #skills .skill .skill-content{
   padding: 10px 5px;
+  padding: .25cm .15cm;
   margin: 0;
-  background: #FFF;
+  background: rgba(255, 255, 255, 1);
   flex-grow: 1;
+
 }
 
 #skills .skill .skill-content [class^='fa']{
@@ -175,6 +178,7 @@ EXPERIENCES
   /* margin: 0; */
   padding: 5px 10px;
   flex-grow: 1;
+
 }
 #experiences .exp .exp-content {
   background: #fff;
