--- a/cv-screenonly.css
+++ b/cv-screenonly.css
@@ -3,8 +3,13 @@
   box-shadow:
     0px 0px 0px 1px grey,
     6px 6px 0px 0px #CCC;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 footer {
   border: 1px solid red;
+}
+footer:before {
+  content: "espace restant...";
 }
