--- a/cv-screenonly.css
+++ b/cv-screenonly.css
@@ -1,4 +1,4 @@
-.page {
+body {
   /* border: 1px solid grey; */
   box-shadow:
     0px 0px 0px 1px grey,
@@ -8,8 +8,17 @@
 }
 
 footer {
-  border: 1px solid red;
-}
-footer:before {
-  content: "espace restant...";
+  background-image: linear-gradient(45deg,
+  rgba(223, 104, 104, 0.541) 25%,
+  #ffffff 25%,
+  #ffffff 50%,
+  rgba(223, 104, 104, 0.541) 50%,
+  rgba(223, 104, 104, 0.541) 75%,
+  #ffffff 75%,
+  #ffffff 100%);
+background-size: 16.00px 16.00px;
+  font-size: 1.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
